fixed some formattingg of the header and spacing of the modal

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,6 @@
 
-body, html{
+html, body{
+  max-width: 100%;
   overflow-x: hidden;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
@@ -8,22 +9,19 @@ p {
   max-width: 80ch;
   line-height:1.8;
   font-size: 20px;
-
 }
-
 .home{
-  width: 100vw;
+  width:100vw;
   height:100vh;
-  position:relative;
+  position:static;
   display:block;
 }
-
 .background{
   width:100vw;
   height:100vh;
   position: absolute;
   animation: fadeOut 3.1s ease forwards;
-  
+
 }
 .introImage{
   width: 200px;
@@ -40,23 +38,26 @@ p {
 
 .introGIF{
   position:absolute;
-  width:100%;
-  height:100%;
+  width:100vw;
+  height:100vh;
   object-fit: contain;
   background-color: black;
   z-index: 1;
   animation: fadeInOut 1s ease-in forwards;
 }
+.header-container{
+  width:100%;
+}
 .header{
-  position: absolute;
+  position: fixed;
   top: 0;
-  display: flex;
-  box-sizing:border-box;
-  overflow: hidden;
-  width: 100%;
-  height: 125px;
+  display: inline-flex;
+  width: 100vw;
+  height: 20%;
   align-items:center;
   justify-content:center;
+  text-align: center;
+  align-content: center;
   z-index:3;
   font-weight: 500;
   font-size: 14px;
@@ -65,16 +66,15 @@ p {
 .header-bg-modal-open{
   background-color: white;
 }
-body.scrolled .header{
-  position: fixed;
-  background-color: rgba(255, 255, 255, 1); /* Optional solid color for fixed state */
+.header.scrolled{
+  background-color: white; /* Optional solid color for fixed state */
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* Optional shadow for fixed state */
 }
 .modal{
   position: absolute;
-  top: 125px;
+  top: 20%;
   left:0;
-  width:100%;
+  width:100vw;
   height:20%;
   opacity:0;
   background-color: white;
@@ -102,7 +102,7 @@ body.scrolled .header{
   cursor:pointer;
 }
 .modal-card{
-  height: 200px;
+  height: 100%;
   width: 30%;
   border-radius: 8px;
   padding:10px;
@@ -110,7 +110,7 @@ body.scrolled .header{
 }
 .modal-card-image{
   width:100%;
-  height:120px;
+  height:20%;
   object-fit: contain;
   cursor: pointer;
 }
@@ -122,9 +122,7 @@ body.scrolled .header{
   cursor:pointer;
 }
 .header-logo{
-  max-width:  100%;
   height:auto;
-  display:block;
   width:5em;
   cursor: pointer;
 }
@@ -137,23 +135,22 @@ body.scrolled .header{
 }
 .header-middle{
   padding: 20px;
-  display:flex;
+  display:inline-flex;
   flex-direction: row;
-  text-align:center;
   align-items:center;
-  justify-content: center;
   gap: 50px;
 }
 .homepage-container{
   scroll-snap-type: y-mandatory;
-  overflow-y: scroll;
+  overflow-y: auto;
+  width:100vw;
   height:100vh;
 }
 .homepage-card{
   scroll-snap-align: start;
   position:relative;
   width:100%;
-  height:100vh;
+  height:100%;
   background-size:cover;
   background-position:center;
   display:flex;
@@ -192,7 +189,6 @@ body.scrolled .header{
   cursor: pointer;
 }
 .homepage-img{
-  width:100%;
   object-fit: fill;
 }
 .homepage-content{
@@ -212,7 +208,7 @@ body.scrolled .header{
 }
 
 .homepage-text-card h1{
-  font-weight: 550; 
+  font-weight: 550;
 }
 
 @keyframes modalFadeIn {
@@ -243,6 +239,6 @@ body.scrolled .header{
     opacity: 1;
   }
   100% {
-    opacity: 0; 
+    opacity: 0;
   }
 }
